--- a/src/main/webapp/style/indexF.css
+++ b/src/main/webapp/style/indexF.css
@@ -42,6 +42,28 @@ body {
   line-height: 80px;
 }
 
+.tittleLogo {
+  font-size: 30px;
+  font-weight: bold;
+  padding: 0 40px;
+  line-height: 80px;
+  color: white;
+  text-decoration: none;
+}
+
+.login {
+ margin-top: 15px;
+ max-width: 120px;
+ max-height: 50px;
+ display: block;
+}
+
+.logos {
+ margin-left: -30px;
+ display: flex;
+ align-items: start;
+}
+
 .nav-menu {
   display: flex;
   margin-right: 40px;
@@ -78,37 +100,81 @@ body {
   cursor: pointer;
   display: none;
 }
-.login {
-     max-width: 100px;
-     max-height: 100px;
-     display: block;
-     margin: auto;
+
+/* CARTS */
+/*Cards*/
+.container-card{
+	width: 100%;
+	display: flex;
+	max-width: 1100px;
+	margin: auto;
+}
+.title-cards{
+	width: 100%;
+	max-width: 1080px;
+	margin: auto;
+	padding: 20px;
+	margin-top: 20px;
+	text-align: center;
+	color: black;
+}
+h4 {
+    margin-top: 20px;
+    font-size: 15px;
+}
+h2 {
+    color: white;
+    margin-left: -20px;
+    margin-right: -20px;
+}
+.card{
+	width: 100%;
+	margin: 20px;
+	border-radius: 6px;
+	overflow: hidden;
+	background:#fff;
+	box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+	transition: all 400ms ease-out;
+	cursor: default;
+}
+.card:hover{
+	box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+	transform: translateY(-3%);
+}
+.card img{
+	width: 100%;
+	height: 210px;
+}
+.card .contenido-card{
+	padding: 15px;
+	text-align: center;
+}
+.card .contenido-card h3{
+	margin-bottom: 15px;
+	color: #7a7a7a;
+}
+.card .contenido-card p{
+	line-height: 1.8;
+	color: #6a6a6a;
+	font-size: 14px;
+	margin-bottom: 5px;
+}
+.card .contenido-card a{
+	display: inline-block;
+	padding: 10px;
+	margin-top: 10px;
+	text-decoration: none;
+	color: #2fb4cc;
+	border: 1px solid #2fb4cc;
+	border-radius: 4px;
+	transition: all 400ms ease;
+	margin-bottom: 5px;
+}
+.card .contenido-card a:hover{
+	background: #2fb4cc;
+	color: #fff;
 }
 
-.MyDialog.ui-dialog .ui-dialog-content {
-    padding: 0px !important;
-    background: aliceblue !important;
-    opacity: 1 !important;
-}
-.card {
-    background-color: #000000;
-    color: #ffffff;
-    font-family: Consolas;
-    text-align: center;
-    margin-left: 0px;
-    margin-right:0px;
-    margin-top:-20px;
-    margin-bottom: 20px;
-    border-radius: 10px;"
-}
-.tittle {
-    background-color: #000000;
-    color: #ffffff;
-    font-family: Consolas;
-    text-align: center;
-    margin-left: 0px;
-    margin-right: 0px;
-}
 /* MOBILE */
 @media (max-width: 768px) {
 
@@ -164,27 +230,10 @@ body {
   .nav-toggle:focus:not(:focus-visible) {
     outline: none;
   }
-  .data {
-      margin-left: 30px;
-      margin-right: 30px;
+  .container-card{
+      flex-wrap: wrap;
   }
-  .card {
-      background-color: #000000;
-      color: #ffffff;
-      font-family: Consolas;
-      text-align: center;
-      margin-left: 30px;
-      margin-right:30px;
-      margin-top:-20px;
-      margin-bottom: 20px;
-      border-radius: 10px;"
-  }
-  .tittle {
-      background-color: #000000;
-      color: #ffffff;
-      font-family: Consolas;
-      text-align: center;
-      margin-left: 30px;
-      margin-right:30px;
+  .card{
+      margin: 15px;
   }
 }
