--- a/src/main/webapp/style/loginF.css
+++ b/src/main/webapp/style/loginF.css
@@ -33,6 +33,8 @@ input[type="password"]{
 }
 .input-contenedor{
     margin-bottom: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
     border: 1px solid #aaa;
 }
 .icon{
@@ -72,7 +74,7 @@ p{
     text-align: center;
 }
 img {
-    max-width: 100px;
+     max-width: 100px;
      display: block;
      margin: 0px auto;
 }
@@ -84,6 +86,10 @@ img {
     margin-top: -10px;
     text-align: center;
     color: black;
+}
+
+.errores {
+    color:red;
 }
 @media(min-width:768px)
 {
