--- a/src/main/webapp/style/indexF.css
+++ b/src/main/webapp/style/indexF.css
@@ -9,7 +9,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   padding: 90px 20px 0;
   margin: 0;
-  background: url(https://cdn.discordapp.com/attachments/690979978824777744/968913691045134426/Biblioteca.jpg);
+  background: linear-gradient(rgba(5,7,12,0.30),rgba(5,7,12,0.30)),
+  url(https://cdn.discordapp.com/attachments/690979978824777744/968913691045134426/Biblioteca.jpg);
   background-size: cover;
   background-attachment: fixed;
 }
