--- a/src/main/webapp/style/reporte.css
+++ b/src/main/webapp/style/reporte.css
@@ -139,7 +139,7 @@ body {
     margin-right:0px;
     margin-top:-20px;
     margin-bottom: 20px;
-    border-radius: 10px;"
+    border-radius: 10px;
 }
 .tittle {
     background-color: #000000;
