Correccion errores Final 2.0

--- a/src/main/webapp/style/historial.css
+++ b/src/main/webapp/style/historial.css
@@ -125,7 +125,7 @@ body {
     margin-right:0px;
     margin-top:-20px;
     margin-bottom: 20px;
-    border-radius: 10px;"
+    border-radius: 10px;
 }
 .tittle {
     background-color: #000000;
@@ -203,7 +203,7 @@ body {
       margin-right:30px;
       margin-top:-20px;
       margin-bottom: 20px;
-      border-radius: 10px;"
+      border-radius: 10px;
   }
   .tittle {
       background-color: #000000;
