--- a/src/main/webapp/style/reporte.css
+++ b/src/main/webapp/style/reporte.css
@@ -309,7 +309,7 @@ img {
       margin-right:30px;
       margin-top:-20px;
       margin-bottom: 20px;
-      border-radius: 10px;"
+      border-radius: 10px;
   }
   .tittle {
       background-color: #000000;
