--- a/src/main/webapp/style/recursosF.css
+++ b/src/main/webapp/style/recursosF.css
@@ -202,7 +202,7 @@ body {
       margin-right:30px;
       margin-top:-20px;
       margin-bottom: 20px;
-      border-radius: 10px;"
+      border-radius: 10px;
   }
   .tittle {
       background-color: #000000;
